SAK-12955
git-svn-id: https://source.sakaiproject.org/svn/content/trunk@71594 66ffb92e-73f9-0310-93c1-f5514f145a0a